Argo ship tuto attempt 1 - end * Finish attempt 1 * need to fix alignment on heroes page * updated Readme file

--- a/style.css
+++ b/style.css
@@ -1,29 +1,92 @@
 body {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 0%, 88%);
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
+div {
+  overflow: auto;
+}
 
+form {
+  color: rgba(54, 118, 134, 0.973);
+}
+
+input[type="text"],
+input[type="email"] {
+  margin: 10px;
+}
+input[type="submit"] {
+  background-color: rgba(54, 118, 134, 0.973);
+  color: white;
+  padding: 10px 25px 10px 25px;
+}
+input[type="submit"]:hover {
+  background-color: white;
+  color: rgba(137, 174, 184, 0.973);
+  padding: 10px 25px 10px 25px;
+}
+
+textarea {
+  width: 445px;
+  height: 323px;
+  margin: 10px;
+}
+
+image {
+  max-width: 100%;
+  height: auto;
+}
+
+header {
+  text-align: center;
+}
+
+.logo {
+  margin: 0px 0px 10px 0px;
+}
+#history {
+  background: #ffffff;
+}
 h1 {
-  color: rgba(235, 251, 255, 0.973);
-  text-shadow: 1px 1px 4px;
+  color: white;
+  text-shadow: 1px 1px 2px rgba(235, 251, 255, 0.973);
   font-size: 400%;
   text-align: center;
   margin: 10% 1% 10% 1%;
 }
+
 h2 {
   color: rgba(54, 118, 134, 0.973);
-  text-align: center;
+}
+
+ul {
+  background: rgba(54, 118, 134, 0.973);
+  padding: 12px;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+ul li {
+  list-style: none;
+}
+ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  color: rgba(137, 174, 184, 0.973);
+  background-color: white;
+  padding: 10px;
 }
 p {
   color: rgba(54, 118, 134, 0.973);
   text-align: center;
 }
-image {
-  max-width: 100%;
-  height: auto;
-}
+
 section {
   padding: 20px;
+  text-align: center;
 }
 
 table {
@@ -45,6 +108,7 @@ td {
   position: center;
   padding: 5px;
 }
+
 #welcome {
   height: 400px;
   background-image: url("assets/ship.jpg");
